Fixed issue with scrollbar

--- a/src/Containers/App/App.module.scss
+++ b/src/Containers/App/App.module.scss
@@ -10,3 +10,10 @@ p {
   font-size: $font-size;
 }
 
+@media only screen and (max-width: 600px) {
+  
+  .App {
+    padding-right: 15px !important;
+  }
+}
+
